# rs-prioritize

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  program.rs  registry.rs  top.rs  tray.rs  windows.rs
